<resources>
    <string name="app_name">EasyJobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_i" translatable="false">798648408431-ugkm4hl58n596raafqmrd1nl8dsm189j.apps.googleusercontent.com</string>
    <!--bottomNavView-->
    <string name="tinder_job">Работа</string>
    <string name="search">Поиск</string>
    <string name="all">Все объявления</string>
    <string name="favorite">Избранное</string>
    <string name="chat">Чат</string>
    <string name="account">Аккаунт</string>
    <!--bottomNavView-->

    <!--CreateAd-->
    <string name="name_company">Название компании</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="category">Категория</string>
    <string name="hint_category">Выберите категория</string>
    <string name="gone">Готово</string>
    <!--CreateAd-->

    <!--category titles-->
    <string name="title_category_programmer">Программист</string>
    <string name="title_category_designer">Дизайнер</string>
    <string name="title_category_sysadmin">Сисадмин</string>
    <string name="title_category_engineer">Инженер</string>
    <!--category titles-->

</resources>