<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder_create_ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/grey_dark"
    tools:context=".fragments.CreateAdsFragment">
    <!--android:layout_height="wrap_content"-->
    <ScrollView
        android:id="@+id/scroll_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <!--android:background="@android:drawable/editbox_background"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/name_company"
                        android:textColor="@color/light_blue_"
                        android:textStyle="bold"
                        android:importantForAutofill="no" />

                    <EditText
                        android:id="@+id/ed_name_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:onClick="onClickSelectCountry"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/light_blue_"
                        android:orientation="horizontal"
                        android:padding="5dp">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/description"
                        android:textColor="@color/light_blue_"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:onClick="onClickSelectCity"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:importantForAutofill="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/light_blue_"
                        android:orientation="horizontal"
                        android:padding="5dp">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/category"
                        android:textColor="@color/light_blue_"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_select_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/hint_category"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:background="@color/light_blue_"
                        android:orientation="horizontal"
                        android:padding="5dp">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btn_gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:onClick="onClickPublish"
                android:text="@string/gone"
                android:layout_marginBottom="20pt"
                android:textColor="@color/light_blue_" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/publishProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_wait"
        android:layout_width="wrap_content"
        android:textSize="70dp"
        android:layout_marginTop="580dp"
        android:layout_marginStart="100dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="WAIT..." />
</FrameLayout>